--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>Cardapio prototipo</title>
+    <style>
+      @font-face {
+        font-family: 'LAKESTER';
+        src: url('./font/LAKESTER\ REGULAR\ LAYER\ 1.otf')format('opentype');
+      }
+      </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
